// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When system is loading RFP plans 1`] = `
<div
  className="input-group mb-3"
>
  <input
    aria-label="Enter search term\\""
    className="form-control"
    disabled={true}
    id="txtRfpPlanSearch"
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Enter search term..."
    type="text"
    value=""
  />
  <div
    className="input-group-append"
  >
    <button
      className="btn btn-primary"
      disabled={true}
      id="btnRfpPlanSearch"
      onClick={[Function]}
    >
      <i
        className="fa fa-search"
      />
       Search
    </button>
  </div>
</div>
`;

exports[`When system is not loading RFP plans 1`] = `
<div
  className="input-group mb-3"
>
  <input
    aria-label="Enter search term\\""
    className="form-control"
    disabled={false}
    id="txtRfpPlanSearch"
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Enter search term..."
    type="text"
    value=""
  />
  <div
    className="input-group-append"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      id="btnRfpPlanSearch"
      onClick={[Function]}
    >
      <i
        className="fa fa-search"
      />
       Search
    </button>
  </div>
</div>
`;
